# 03-it-helpdesk-bot

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  test.ipynb
data/samples/json/: helpdesk_knowledge_base.json
data/samples/markdown/: helpdesk_quick_reference.md
data/samples/txt/: data_backup_recovery.txt  email_communication.txt  hardware_troubleshooting.txt  mobile_devices.txt  network_troubleshooting.txt  security_antivirus.txt  software_troubleshooting.txt  windows_troubleshooting.txt
src/: __init__.py
src/knowledge_chat/application/: chat_use_case.py  import_files_use_case.py
src/knowledge_chat/config/: prompts.py  settings.py
src/knowledge_chat/dependencies/: get_chunker.py  get_document_loader.py  get_embedding_service.py  get_llm_service.py  get_tts_service.py  get_vector_store.py
src/knowledge_chat/domain/entities/: message.py  movie.py
src/knowledge_chat/domain/interfaces/: document_chunker.py  document_loader.py  embedding_service.py  llm_service.py  tts_service.py  vector_store.py
src/knowledge_chat/infrastructure/chunking/: recursive_character_chunker.py
src/knowledge_chat/infrastructure/document_loader/: __init__.py  json_loader.py  markdown_loader.py  multi_format_loader.py  pdf_loader.py  text_file_loader.py
src/knowledge_chat/infrastructure/embedding_service/: openai_embedding_service.py
src/knowledge_chat/infrastructure/llm_service/: openai_llm_service.py
src/knowledge_chat/infrastructure/text_to_speech/: huggingface_tts_service.py
src/knowledge_chat/presentation/: ui_gradio.py
(+1 files in other folders)
